--- a/static/main.css
+++ b/static/main.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #f8f8f8;
+  background-color: #ebdbbc;
   text-align: center;
   overflow-x: hidden;
 }
@@ -68,10 +68,10 @@ body {
 /* !Forms */
 
 form {
-  background-color: #fff;
-  max-width: 80%;
-  margin: 50px auto;
-  padding: 30px;
+  background-color: #ece6d9;
+  max-width: 100%;
+  margin: auto;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -80,7 +80,7 @@ form {
   width: 100%;
   height: 17rem;
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #d8c9c9;
   border-radius: 15px;
   box-sizing: border-box;
 }
@@ -98,7 +98,7 @@ input[type="text"] {
   /* A light grey border that matches the form style */
   border-radius: 4px;
   /* Rounded corners for the inputs */
-  background-color: #f8f8f8;
+  background-color: #e9e4dc;
   /* A light background color for the inputs */
   font-size: 16px;
   /* Slightly larger font size for readability */
@@ -120,7 +120,7 @@ input[type="text"]:focus {
 /* Form container styles */
 .form-container {
   display: none;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   border-radius: 10px;
 
 }
@@ -144,20 +144,154 @@ form textarea {
   resize: none;
 }
 
-/* Submit button */
+/* Submit button
 form button[type="submit"] {
   background-color: #4CAF50;
   color: white;
-  padding: 10px 20px;
+  padding: 8px 16px;
+  border: none;
   border-radius: 5px;
   margin-top: 10px;
   font-size: 16px;
-  transition: background-color 0.3s, transform 0.2s;
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+  cursor: pointer;
+  width: auto;
+  display: inline-block;
 }
 
 form button[type="submit"]:hover {
   background-color: #45a049;
-  transform: scale(1.05);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+} */
+
+/* form button[type="button"] {
+  background-color: #FFA500;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  font-size: 16px;
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+  cursor: pointer;
+  width: auto;
+  display: inline-block;
+}
+
+form button[type="button"]:hover {
+  background-color: #e69500;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+} */
+
+
+/* CSS */
+.button-74 {
+  background-color: #fbeee0;
+  border: 2px solid #5a3600;
+  border-radius: 30px;
+  box-shadow: #5a3600 2px 2px 0 0;
+  color: #5a3600;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 42px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-74:hover {
+  background-color: #cea172;
+}
+
+.button-74:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-74 {
+    min-width: 120px;
+    padding: 0 25px;
+  }
+}
+
+
+/* CSS */
+.button-17 {
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+ 
+}
+
+.button-17:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+.button-17:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.button-17:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.button-17:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.button-17:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.button-17:disabled {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
 
 /* Form description styles */
@@ -237,6 +371,8 @@ h1 {
   margin-right: 10px; /* Adjust spacing as needed */
 }
 
+
+
 .demo-text {
   font-size: 0.9em; /* Adjust size as needed to differentiate from the main header */
   color:  #6ea70c ; /* Adjust color as needed */
@@ -265,7 +401,7 @@ h1 {
   /* Centers the rectangle and adds vertical spacing */
   padding: 30px;
   /* Matches the form padding */
-  background-color: #fff;
+  background-color: #ece6d9;
   /* Matches the form background color */
   border-radius: 10px;
   /* Matches the form border radius */
@@ -304,7 +440,7 @@ h1 {
   /* Adjusted to fit two 500px columns with some spacing */
   margin: 30px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #ebdbbc;
   border-radius: 20px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -327,7 +463,7 @@ h1 {
 .book {
   margin-bottom: 20px;
   padding: 15px;
-  background-color: #f8f8f8;
+  background-color: #e9e4db;
   border: 1px solid #ccc;
   border-radius: 4px;
   text-align: left;
@@ -365,7 +501,7 @@ h1 {
 
 /* Container for the "Read Books" section */
 .read-books-container {
-  background-color: #fff;
+  background-color: #ece6d9;
   /* Matches the form and other containers */
   max-width: 400px;
   /* Maximum width of the container */
@@ -492,7 +628,7 @@ h1 {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #ffffff;
   margin: 15% auto;
   /* 15% from the top and centered */
   padding: 20px;
@@ -659,7 +795,7 @@ button {
   }
 
   form {
-    background-color: #fff;
+    background-color: #ece6d9;
     max-width: 100%;
   }
 
@@ -854,4 +990,40 @@ button {
   font-size: 13px;
   margin-top: -5px;
   padding: 5px;
+}
+
+
+
+.form-group_username {
+  position: relative;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  max-width: 300px;
+  margin-left: 300px;
+}
+
+.form-group_password {
+  position: relative;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  max-width: 300px;
+  margin-left: 300px;
+}
+
+.form-group_rememberme {
+  position: relative;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  max-width: 300px;
+  margin-left: 300px;
+}
+
+.form-group_button {
+  position: relative;
+  margin-bottom: 1.5rem;
+  font-size: 20px;
+  text-align: center;
+  max-width: 300px;
+  margin-left: 300px;
+
 }
