--- a/templates/main.html
+++ b/templates/main.html
@@ -11,39 +11,41 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615709816">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16615709816');
+    </script>
+
 </head>
 
 <body>
-    <div class="topbar">
-        <div class="logo">
-            <a href="{% url 'projects' %}">
-                <img src="{% static 'images/logo.jpg' %}" alt="Logo">
-            </a>
-        </div>
-        <div class="info">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-    </div>
+    
     <header>
         <div class="links">
             <ul>
-                <li><a href="{% url 'projects' %}" class="active">Home</a></li>
-                <li><a href="{% url 'projects' %}">Saved</a></li>
-                <li><a href="#">Topic</a></li>
+                <a href="{% url 'projects' %}">
+                    <img class="headerlogo" src="{% static 'images/logo.jpg' %}" alt="Logo">
+                  </a>
+        
             </ul>
         </div>
         <div class="button-container">
             <div class="login-button">
-                <button id="loginBtn">LOGIN</button>
+                <button id="loginBtn">Sign in</button>
             </div>
             <div class="register-button">
-                <button id="registerBtn">REGISTER</button>
+                <button id="registerBtn">Sign up</button>
             </div>
             <!-- Logout button -->
             {% if user.is_authenticated %}
             <div class="logout-button">
-                <button type="button" class="logout-button" id="logoutButton">LOGOUT</button>
+                <button type="button" class="logout-button" id="logoutButton">sign out</button>
             </div>
             {% endif %}
             <div id="logout-message" style="color: green;"></div> <!-- Logout message placeholder -->
@@ -61,8 +63,8 @@
             <div class="section1">
                 <div class="links">
                     <a href="#">Home</a>
-                    <a href="#">Log-in</a>
-                    <a href="#">Register</a>
+                    <a href="#">Sign in</a>
+                    <a href="#">Sing up</a>
                 </div>
             </div>
             <div class="section2">
