--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -159,41 +159,31 @@
     </div>
 
     </div>
+    <div class="mostrecommendedbooksbox">
+        <h1 class="mostrecommendedbookstext">Most Recommended Books</h1>
+        <div class="mostrecommendedbookscontainer" id="mostRecommendedBooksList">
+            {% for book in most_recommended_books %}
+            <div class="mostrecommendedbook">
+                <a href="{% url 'book-detail' book.id %}">
+                    <img src="{{ book.cover_image_url }}" alt="Cover image for {{ book.title }}">
+                </a>
 
+                
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    
+</div>
+    
+
+
+<div id="bookColumns" class="book-columns">
+    <h2 id="aiRecommendationHeader">AI recommends these books for you</h2>
+    <div id="column1" class="book-column"></div>
+    <div id="column2" class="book-column"></div>
 </div>
 
-
-
-    <div id="bookColumns" class="book-columns">
-        <div id="column1" class="book-column"></div>
-        <div id="column2" class="book-column"></div>
-    </div>
-    <!-- Login Modal -->
-<div id="loginModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <form id="loginForm" method="post" action="{% url 'users:ajax_login' %}">
-            {% csrf_token %}
-            <div class="form-group_username">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group_password">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="form-group_rememberme">
-                <label for="remember_me">Remember me</label>
-                <input type="checkbox" id="remember_me" name="remember_me">
-            </div>
-            <div class="form-group_button">
-                <button type="submit" class="login-button">Login</button>
-            </div>
-            <div id="login-message" style="color: green;"></div> <!-- Success message placeholder -->
-            <div id="login-error" style="color: red;"></div> <!-- Error message placeholder -->
-        </form>
-    </div>
-</div>
 
 
 
@@ -202,37 +192,7 @@
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-     <!-- Register Modal -->
-     <div id="registerModal" class="modal">
-        <div class="modal-content">
-            <span class="close-register">&times;</span>
-            <form id="registerForm" method="post" action="{% url 'users:register' %}">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="username-register">Username:</label>
-                    <input type="text" id="username-register" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="email-register">Email:</label>
-                    <input type="email" id="email-register" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password1-register">Password:</label>
-                    <input type="password" id="password1-register" name="password1" required>
-                </div>
-                <div class="form-group">
-                    <label for="password2-register">Confirm Password:</label>
-                    <input type="password" id="password2-register" name="password2" required>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="register-button">Register</button>
-                </div>
-                <div id="register-error" style="color: red;"></div> <!-- Error message placeholder -->
-                <div id="register-success" style="color: green;"></div> <!-- Success message placeholder -->
-            </form>
-        </div>
-    </div>
-
+     
 
         <!-- Login Warning Modal -->
     <div id="loginWarningModal" class="modal" tabindex="-1" role="dialog">
@@ -261,42 +221,7 @@
         <button onclick="acceptCookies()">Accept</button>
     </div>
 
-    <script>
-        document.getElementById('logoutButton').addEventListener('click', function() {
-            // Directly use the CSRF token provided by Django
-            const csrfToken = '{{ csrf_token }}';
-            console.log("CSRF Token:", csrfToken);  // Log the CSRF token for debugging
-
-            // Define the URL directly
-            const logoutUrl = '{% url "logout" %}';
-
-            // Perform the fetch request
-            fetch(logoutUrl, {
-                method: 'POST',
-                headers: {
-                    'X-CSRFToken': csrfToken,
-                    'Content-Type': 'application/x-www-form-urlencoded'  // Ensure content type is correct
-                },
-                body: ''  // Empty body for POST request
-            }).then(response => {
-                console.log("Response Status:", response.status);  // Log response status for debugging
-                var logoutMessageDiv = document.getElementById('logout-message');
-                if (response.ok) {
-                    logoutMessageDiv.textContent = 'You have been logged out successfully.';
-                    setTimeout(() => {
-                        location.reload();  // Optionally reload the page after a short delay
-                    }, 2000);  // Adjust delay as needed
-                } else {
-                    return response.text().then(text => { throw new Error(text) });  // Capture detailed error message
-                }
-            }).catch(error => {
-                console.error('Error:', error);  // Log detailed error to console
-                var logoutMessageDiv = document.getElementById('logout-message');
-                // logoutMessageDiv.textContent = 'Logout failed: ' + error.message;  // Display detailed error message
-                logoutMessageDiv.style.color = 'red';  // Change color to red for errors
-            });
-        });
-        </script>
+    
 
 
     <script src="{% static 'scripts.js' %}"></script>
