--- a/static/title.css
+++ b/static/title.css
@@ -345,3 +345,129 @@ footer .container .section3 .about p {
 .abouttext{
   font-size: 15px;
 }
+
+
+.form-group_username {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  max-width: 180px;
+  margin-left: 180px;
+  font-size: 16px;
+}
+
+.form-group_password {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  max-width: 180px;
+  margin-left: 180px;
+}
+
+.form-group_rememberme {
+  position: relative;
+  display: grid;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  max-width: 180px;
+  margin-left:180px;
+  gap: 0px;
+  grid-template-columns: 1fr;
+}
+
+.rememberme_box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  max-width: 15px;
+  max-height: 15px;
+}
+
+
+.form-group_button {
+  position: relative;
+  margin-bottom: 1.5rem;
+  font-size: 20px;
+  text-align: center;
+  max-width: 180px;
+  margin-left: 180px;
+  
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  font-size: 25px;
+  
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #ebdbbc;
+  margin: 15% auto;
+  /* 15% from the top and centered */
+  padding: 10px;
+  border: 1px solid #888;
+  width: 30%;
+  /* Could be more or less, depending on screen size */
+  font-size: 25px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.close-register {
+  color: #aaa;
+  float: right;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.close-register:hover,
+.close-register:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.link1,
+.link2,
+.link3 {
+  text-decoration: none;
+  color: #000;
+  font-size: 12px;
+}
