--- a/projects/templates/projects/book_detail.html
+++ b/projects/templates/projects/book_detail.html
@@ -63,9 +63,9 @@
             {% csrf_token %}
             <button type="submit" class="read-button">
               {% if is_read %}
-                Remove from Read List
+                Remove from Favorite List
               {% else %}
-                Mark as Read
+                Mark as Favorite
               {% endif %}
             </button>
           </form>
