--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -145,7 +145,7 @@
     </div>
     <div class="box">
         <body data-get-read-books-url="{% url 'get_read_books' %}"></body>
-        <h1 class="readedbooktext">Readed Books</h1>
+        <h1 class="readedbooktext">Favorite Books</h1>
     <div class="read-books-container" id="readBooksList">
         <!-- Books will be loaded here by JavaScript -->
     </div>
