--- a/static/main.css
+++ b/static/main.css
@@ -470,7 +470,7 @@ h1 {
 .book {
   margin-bottom: 20px;
   padding: 15px;
-  background-color: #f5f5f5;
+  background-color: #eeeee6;
   border: 1px solid #ddd;
   border-radius: 10px;
   text-align: left;
@@ -1005,7 +1005,7 @@ button {
 
 .mostrecommendedbook {
   width: 150px;
-  padding: 1px;
+  padding: 4px;
   background-color: #ece6d9;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -1019,10 +1019,13 @@ button {
 
 }
 
+.mostrecommendedbook img:hover {
+  transform: scale(1.1);
+}
 
 
-.mostrecommendedbook p {
-  font-size: 14px;
-  color: #666;
- 
+@media (max-width: 600px) {
+  .mostrecommendedbooksbox {
+      display: none;
+  }
 }
